// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentCard Tests it matches snapshot 1`] = `
<Connect(CommentCard)
  comment={
    Object {
      "articleId": 170,
      "content": "Thanks",
      "createdAt": "2018-11-13T16:13:29.901Z",
      "edited": false,
      "id": 9,
      "likeCount": 0,
      "likes": Array [],
      "updatedAt": "2018-11-13T16:13:29.901Z",
      "user": Object {
        "firstname": "JAY",
        "id": 11,
        "image": "http://res.cloudinary.com/dbsxxymfz/image/upload/v1541429992/es8jfxtycdfjvec6ha1a.png",
        "lastname": "OBI",
        "username": "johngorithm",
      },
      "userId": 11,
    }
  }
/>
`;

exports[`CommentCard Tests it renders username when firstname and lastname are undefined 1`] = `
<Connect(CommentCard)
  comment={
    Object {
      "articleId": 170,
      "content": "Thanks",
      "createdAt": "2018-11-13T16:13:29.901Z",
      "edited": false,
      "id": 9,
      "likeCount": 0,
      "likes": Array [],
      "updatedAt": "2018-11-13T16:13:29.901Z",
      "user": Object {
        "firstname": undefined,
        "id": 11,
        "image": undefined,
        "lastname": undefined,
        "username": "johngorithm",
      },
      "userId": 11,
    }
  }
/>
`;
